# Studytracker

./: package-lock.json  package.json
.github/workflows/: azure-static-web-apps-brave-island-09c950a1e.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: intro.component.tsx  intro.tsx
client/: instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts
client/app/: error-page.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
client/app/(auth)/: actions.ts  layout.tsx  login.tsx  page.tsx
client/app/(client)/: layout.tsx
client/app/(components)/: add-material.component.tsx  intro.component.tsx  last-opened.component.tsx  type-text.component.tsx  types.ts
client/app/admin/: layout.tsx  page.tsx
client/app/components/: add-material.component.tsx  block.tsx  button.tsx  dashboard.component.tsx  form.component.tsx  input.tsx  (+2 more)
server/: Dockerfile  auth.py  base.py  data.py  main.py  material.py  pyproject.toml  schemas.py  settings.py
server-fastapi/: auth.py  docker-compose.yml  main.py  material.py
server-fastapi-sqlite/: schemas.py
server-nest/: Dockerfile  docker-compose.yml  package-lock.json  package.json
server-nest-mongodb/: package-lock.json  package.json
server-nest-mongodb/src/: app.module.ts  main.ts
server-nest-psql/: package-lock.json  package.json  tsconfig.json
server-nest-psql/prisma/: schema.prisma
server-nest-psql/src/: app.module.ts  main.ts
server-nest/src/: app.controller.ts  app.guard.ts  app.module.ts  app.service.ts  main.ts
(+141 files in other folders)
